2005-09-24  Emanuele Giaquinta <emanuele.giaquinta@gmail.com> (tiny change)

	* term/rxvt.el (rxvt-register-default-colors): Add support for 88
	colors rxvt-unicode terminals by using the same code as xterm.el.

2005-09-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/tex-mode.el (tex-font-lock-append-prop)
	(tex-font-lock-suscript, tex-insert-quote, latex-indent): Adjust to the
	new symbol used for the tex-verbatim face.

2005-09-24  Emilio C. Lopes  <eclig@gmx.net>

	* woman.el (woman-file-name):
	* wid-edit.el (widget-file-prompt-value)
	(widget-coding-system-prompt-value):
	* w32-fns.el (set-w32-system-coding-system):
	* vc.el (vc-version-diff, vc-annotate):
	* textmodes/reftex-auc.el (reftex-arg-cite)
	(reftex-arg-index-tag):
	* textmodes/refer.el (refer-get-bib-files):
	* textmodes/artist.el (artist-figlet-choose-font):
	* terminal.el (terminal-emulator):
	* replace.el (occur-read-primary-args):
	* rect.el (string-rectangle, string-insert-rectangle):
	* ps-print.el (ps-print-preprint):
	* progmodes/pascal.el (pascal-goto-defun):
	* progmodes/etags.el (visit-tags-table, visit-tags-table-buffer):
	* progmodes/compile.el (compilation-find-file):
	* printing.el (pr-interactive-n-up):
	* play/animate.el (animate-birthday-present):
	* net/rcompile.el (remote-compile):
	* man.el (man, Man-goto-section, Man-follow-manual-reference):
	* mail/rmailsum.el (rmail-summary-search-backward)
	(rmail-summary-search):
	* mail/rmailout.el (rmail-output-read-rmail-file-name)
	(rmail-output-read-file-name):
	* mail/rmail.el (rmail-search, rmail-search-backwards):
	* mail/mailabbrev.el (merge-mail-abbrevs, rebuild-mail-abbrevs):
	* locate.el (locate):
	* international/quail.el (quail-show-keyboard-layout):
	* international/mule.el (set-buffer-file-coding-system)
	(revert-buffer-with-coding-system, set-file-name-coding-system)
	(set-terminal-coding-system, set-keyboard-coding-system)
	(set-next-selection-coding-system):